# miffy

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  config.default.toml  config.sample.toml  docker-compose.yaml  justfile
.github/: renovate-global.json
.github/workflows/: build.yaml  release-plz.yml  release.yaml  renovate.yaml  test.yaml
examples/: demo.rs
src/: domain.rs  error.rs  jaq.rs  log.rs  main.rs  management.rs  model.rs  proxy.rs  representation.rs  sample.rs  serialization.rs  settings.rs  slurp.rs
src/diff/: dispatcher.rs  error.rs  jaq.rs  mirror.rs  mod.rs  model.rs  publisher.rs  tx_ext.rs
src/http/: client.rs  error.rs  mod.rs  model.rs  slurp.rs
src/proxy/: error.rs  log.rs  mod.rs  run.rs  service.rs  slurp.rs
src/util/: gcloud.rs  header_ext.rs  jaq.rs  log.rs  mod.rs
