[package]
name = "miffy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
hyper = "1.5.1"
hyper-util = { version = "0.1.10", features = ["server", "http1", "client", "client-legacy"] }
serde_json = "1.0.133"
http-body-util = "0.1.2"
matchit = "0.8.4"
rdkafka = "0.37.0"
http = "1.2.0"
serde = { version = "1.0.216", features = ["derive"] }
http-serde = "2.1.1"
bytes = { version = "1.9.0", features = ["serde"] }
serde_with = { version = "3.11.0", features = ["base64"] }
thiserror = "2.0.8"
strum = { version = "0.26.3", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"
lenient_bool = "0.1.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
axum = { version = "0.8.0-alpha.1", features = ["macros"] }

[lints.clippy]
unwrap_used = { level = "deny" }
