[package]
name = "miffy"
version = "1.0.1"
edition = "2024"
authors = ["Elmar Athmer"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"
description = "A shadow-testing proxy: Send requests to a \"reference\" implementation, send the request to a \"candidate\" implementation, always respond with the \"reference\" implementation and log/publish both responses if they are not equal."

[features]
# google-cloud support: GKE metadata detection, stackdrive-logging support
gcloud = ["dep:tracing-stackdriver", "dep:tracing-opentelemetry"]
default = ["gcloud"]

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
hyper = "1.6.0"
hyper-util = { version = "0.1.16", features = ["server", "http1", "client", "client-legacy", "service", "tokio"] }
serde_json = "1.0.141"
http-body-util = "0.1.3"
matchit = "0.8.4"
rdkafka = { version = "0.37.0", features = ["sasl", "ssl", "zstd"] }
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
http-serde = "2.1.1"
bytes = { version = "1.10.1", features = ["serde"] }
serde_with = { version = "3.14.0", features = ["base64"] }
thiserror = "2.0.12"
strum = { version = "0.27.2", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["trace"] }
tower = { version = "0.5.2", features = ["util"] }
config = { version = "0.15.13", default-features = false, features = ["toml", "convert-case"] }
anyhow = "1.0.98"
tracing-stackdriver = { version = "0.10.0", features = ["http", "opentelemetry"], optional = true }
tracing-opentelemetry = { version = "0.32.0", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
headers = { version = "0.4.1" }

[lints.clippy]
unwrap_used = { level = "deny" }
